fix md cell to python

--- a/uace_analysis.ipynb
+++ b/uace_analysis.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,9 +33,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "<style>\n",
+       "    /* Change background color of header row */\n",
+       "    th {\n",
+       "        background-color: #2c3e50;\n",
+       "    }\n",
+       "    /* Change background color of even rows */\n",
+       "    tr:nth-child(even) {\n",
+       "        background-color: #34495e;\n",
+       "    }\n",
+       "    /* Change background color of odd rows */\n",
+       "    tr:nth-child(odd) {\n",
+       "        background-color: #2c3e50;\n",
+       "    }\n",
+       "    /* Change text color of all cells */\n",
+       "    td {\n",
+       "        color: white;\n",
+       "    }\n",
+       "</style>\n"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# Styles for tables to be used in the notebook\n",
     "# custom CSS styles for tables\n",
@@ -72,8 +103,224 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>District_Name</th>\n",
+       "      <th>SCHOOL</th>\n",
+       "      <th>Gender</th>\n",
+       "      <th>2011 Total</th>\n",
+       "      <th>%0-5 Points</th>\n",
+       "      <th>%6-10 Points</th>\n",
+       "      <th>%11-15 Points</th>\n",
+       "      <th>%16-20 Points</th>\n",
+       "      <th>%21-25 Points</th>\n",
+       "      <th>2012 Total</th>\n",
+       "      <th>...</th>\n",
+       "      <th>2014 Total</th>\n",
+       "      <th>%0-5 Points.3</th>\n",
+       "      <th>%6-10 Points.3</th>\n",
+       "      <th>%11-15 Points.3</th>\n",
+       "      <th>%16-20 Points.3</th>\n",
+       "      <th>2015 Total</th>\n",
+       "      <th>%0-5 Points.4</th>\n",
+       "      <th>%6-10 Points.4</th>\n",
+       "      <th>%11-15 Points.4</th>\n",
+       "      <th>%16-20 Points.4</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>AMUDAT</td>\n",
+       "      <td>POKOT SECONDARY SCHOOL</td>\n",
+       "      <td>FEMALE</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>50.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>50.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>AMUDAT</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>MALE</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>55.6</td>\n",
+       "      <td>44.4</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>25.0</td>\n",
+       "      <td>50.0</td>\n",
+       "      <td>25.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>AMUDAT Total</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>11.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>11.0</td>\n",
+       "      <td>54.5</td>\n",
+       "      <td>36.4</td>\n",
+       "      <td>9.1</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td></td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>40.0</td>\n",
+       "      <td>40.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>PADER</td>\n",
+       "      <td>ARCHBP.FLYNN SECONDARY SCHOOL</td>\n",
+       "      <td>FEMALE</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>14</td>\n",
+       "      <td>21.4</td>\n",
+       "      <td>42.9</td>\n",
+       "      <td>35.7</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>PADER</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>MALE</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>22</td>\n",
+       "      <td>40.9</td>\n",
+       "      <td>50.0</td>\n",
+       "      <td>9.1</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 30 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  District_Name                         SCHOOL  Gender  2011 Total  \\\n",
+       "0        AMUDAT         POKOT SECONDARY SCHOOL  FEMALE         NaN   \n",
+       "1        AMUDAT                            NaN    MALE         NaN   \n",
+       "2  AMUDAT Total                            NaN     NaN         NaN   \n",
+       "3         PADER  ARCHBP.FLYNN SECONDARY SCHOOL  FEMALE         NaN   \n",
+       "4         PADER                            NaN    MALE         NaN   \n",
+       "\n",
+       "   %0-5 Points  %6-10 Points  %11-15 Points  %16-20 Points  %21-25 Points  \\\n",
+       "0          0.0           0.0            0.0            0.0            0.0   \n",
+       "1          0.0           0.0            0.0            0.0            0.0   \n",
+       "2          0.0           0.0            0.0            0.0            0.0   \n",
+       "3          0.0           0.0            0.0            0.0            0.0   \n",
+       "4          0.0           0.0            0.0            0.0            0.0   \n",
+       "\n",
+       "   2012 Total  ...  2014 Total  %0-5 Points.3  %6-10 Points.3  \\\n",
+       "0         3.0  ...         2.0           50.0             0.0   \n",
+       "1         8.0  ...         9.0           55.6            44.4   \n",
+       "2        11.0  ...        11.0           54.5            36.4   \n",
+       "3         NaN  ...         NaN            0.0             0.0   \n",
+       "4         NaN  ...         NaN            0.0             0.0   \n",
+       "\n",
+       "   %11-15 Points.3  %16-20 Points.3  2015 Total  %0-5 Points.4  \\\n",
+       "0             50.0              0.0           1            0.0   \n",
+       "1              0.0              0.0           4           25.0   \n",
+       "2              9.1              0.0                       20.0   \n",
+       "3              0.0              0.0          14           21.4   \n",
+       "4              0.0              0.0          22           40.9   \n",
+       "\n",
+       "   %6-10 Points.4  %11-15 Points.4  %16-20 Points.4  \n",
+       "0             0.0            100.0              0.0  \n",
+       "1            50.0             25.0              0.0  \n",
+       "2            40.0             40.0              0.0  \n",
+       "3            42.9             35.7              0.0  \n",
+       "4            50.0              9.1              0.0  \n",
+       "\n",
+       "[5 rows x 30 columns]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# read csv file\n",
     "results_df = pd.read_csv(\"./UaceResults2011-2015.csv\")\n",
@@ -83,9 +330,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "District_Name         0\n",
+      "SCHOOL             1959\n",
+      "Gender              114\n",
+      "2011 Total         1240\n",
+      "%0-5 Points           0\n",
+      "%6-10 Points          0\n",
+      "%11-15 Points         0\n",
+      "%16-20 Points         0\n",
+      "%21-25 Points         0\n",
+      "2012 Total          985\n",
+      "%0-5 Points.1         0\n",
+      "%6-10 Points.1        0\n",
+      "%11-15 Points.1       0\n",
+      "%16-20 Points.1       0\n",
+      "%21-25 Points.1       0\n",
+      "2013 Total          553\n",
+      "%0-5 Points.2         0\n",
+      "%6-10 Points.2        0\n",
+      "%11-15 Points.2       0\n",
+      "%16-20 Points.2       0\n",
+      "2014 Total          358\n",
+      "%0-5 Points.3         0\n",
+      "%6-10 Points.3        0\n",
+      "%11-15 Points.3       0\n",
+      "%16-20 Points.3       0\n",
+      "2015 Total          295\n",
+      "%0-5 Points.4         0\n",
+      "%6-10 Points.4        0\n",
+      "%11-15 Points.4       0\n",
+      "%16-20 Points.4       0\n",
+      "dtype: int64\n"
+     ]
+    }
+   ],
    "source": [
     "# discover null rows\n",
     "print(results_df.isnull().sum())"
@@ -93,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,9 +390,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "District_Name         0\n",
+      "SCHOOL             1959\n",
+      "Gender              114\n",
+      "2011 Total            0\n",
+      "%0-5 Points           0\n",
+      "%6-10 Points          0\n",
+      "%11-15 Points         0\n",
+      "%16-20 Points         0\n",
+      "%21-25 Points         0\n",
+      "2012 Total            0\n",
+      "%0-5 Points.1         0\n",
+      "%6-10 Points.1        0\n",
+      "%11-15 Points.1       0\n",
+      "%16-20 Points.1       0\n",
+      "%21-25 Points.1       0\n",
+      "2013 Total            0\n",
+      "%0-5 Points.2         0\n",
+      "%6-10 Points.2        0\n",
+      "%11-15 Points.2       0\n",
+      "%16-20 Points.2       0\n",
+      "2014 Total            0\n",
+      "%0-5 Points.3         0\n",
+      "%6-10 Points.3        0\n",
+      "%11-15 Points.3       0\n",
+      "%16-20 Points.3       0\n",
+      "2015 Total            0\n",
+      "%0-5 Points.4         0\n",
+      "%6-10 Points.4        0\n",
+      "%11-15 Points.4       0\n",
+      "%16-20 Points.4       0\n",
+      "dtype: int64\n"
+     ]
+    }
+   ],
    "source": [
     "# discover current null rows\n",
     "print(results_df.isnull().sum())"
@@ -121,8 +444,16 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.10.9"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.12"
   },
   "orig_nbformat": 4
  },
