Finalize data cleaning

--- a/uace_analysis.ipynb
+++ b/uace_analysis.ipynb
@@ -435,6 +435,107 @@
     "# discover current null rows\n",
     "print(results_df.isnull().sum())"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "######################## OJOK ###########################\n",
+    "\n",
+    "# Handle misplaced schools\n",
+    "'''\n",
+    "Algorithm: If cell in 'SCHOOL' column is empty AND the entry is not for DISTRICT TOTAL ie cell for DISTRICT doesn't contain 'Total'\n",
+    "            THEN copy the SCHOOL before and paste it in the current SCHOOL cell.\n",
+    "'''\n",
+    "# Loop through the DataFrame and fill empty cells in the 'SCHOOL' column\n",
+    "previous_school = None\n",
+    "\n",
+    "for index, row in results_df.iterrows():\n",
+    "    if pd.isnull(row['SCHOOL']):\n",
+    "        district_name = row['District_Name']\n",
+    "        # We make sure the previous school in the entry before isn't null so that we don't copy null values if present.\n",
+    "        if previous_school is not None and 'total' not in district_name.lower():\n",
+    "            results_df.at[index, 'SCHOOL'] = previous_school\n",
+    "    else:\n",
+    "        previous_school = row['SCHOOL']\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# discover current null rows\n",
+    "print(results_df.isnull().sum())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Remove genderless entries that are not district totals\n",
+    "\n",
+    "# Filter and remove entries where 'Gender' column is empty and 'District_Name' doesn't contain 'Total'\n",
+    "results_df = results_df[~(results_df['Gender'].isnull() & ~results_df['District_Name'].str.contains('Total', case=False))]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# discover current null rows\n",
+    "print(results_df.isnull().sum())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Remove duplicates\n",
+    "results_df = results_df.drop_duplicates()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Convert data in relevant columns from string to float\n",
+    "# Select all columns from the 4th column onwards\n",
+    "columns_to_convert = results_df.columns[3:]\n",
+    "\n",
+    "# Convert space ie ' ' strings to 0.0f in the selected columns. To prevent ValueErros during conversions\n",
+    "results_df[columns_to_convert] = results_df[columns_to_convert].replace(' ', float(0.0))\n",
+    "\n",
+    "# Convert data from the 4th column onwards to float\n",
+    "results_df[columns_to_convert] = results_df[columns_to_convert].astype(float)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# At this point we keep two dataframes for consistent accuracy. One dataset will keep the district totals\n",
+    "# and will be used for operations involving districts, while the other removes district totals by removing genderless entries\n",
+    "\n",
+    "# Dataset for district operations\n",
+    "districts_df = results_df\n",
+    "\n",
+    "# Dataset without district totals\n",
+    "results_df = results_df[(results_df['Gender'] == 'MALE') | (results_df['Gender'] == 'FEMALE')]"
+   ]
   }
  ],
  "metadata": {
