Added code to visualize locations of least performing school districts on a map using Folium.

--- a/uace_analysis.ipynb
+++ b/uace_analysis.ipynb
@@ -757,6 +757,212 @@
     "plt.grid(True)\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "######################## CONRAD ###########################\n",
+    "from matplotlib.ticker import MaxNLocator\n",
+    "\n",
+    "\n",
+    "# Step 1: Filter the DataFrame to include only entries with 'Gender' as 'FEMALE' then 'MALE'\n",
+    "female_data = results_df[results_df['Gender'] == 'FEMALE']\n",
+    "male_data = results_df[results_df['Gender'] == 'MALE']\n",
+    "\n",
+    "# Step 2: Calculate the total of all values from the 4th column onwards for 'FEMALE' entries\n",
+    "female_total = female_data.iloc[:, 3:].sum()\n",
+    "male_total = male_data.iloc[:, 3:].sum()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Males Vs Females Numbers\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "total_males_per_year = [\n",
+    "    male_total['2011 Total'],\n",
+    "    male_total['2012 Total'],\n",
+    "    male_total['2013 Total'],\n",
+    "    male_total['2014 Total'],\n",
+    "    male_total['2015 Total']\n",
+    "]\n",
+    "\n",
+    "total_females_per_year = [\n",
+    "    female_total['2011 Total'],\n",
+    "    female_total['2012 Total'],\n",
+    "    female_total['2013 Total'],\n",
+    "    female_total['2014 Total'],\n",
+    "    female_total['2015 Total']\n",
+    "]\n",
+    "\n",
+    "# Create a new figure and axis object\n",
+    "plt.figure(figsize=(7, 6))\n",
+    "ax = plt.gca()\n",
+    "\n",
+    "# Plot the first graph\n",
+    "ax.plot(years, total_females_per_year, label='Females', marker='o', linestyle='-', color='b')\n",
+    "\n",
+    "# Plot the second graph\n",
+    "ax.plot(years, total_males_per_year, label='Males', marker='x', linestyle='--', color='r')\n",
+    "\n",
+    "#to remove the years in points ie 2011.5 from the x-axis\n",
+    "ax.xaxis.set_major_locator(MaxNLocator(integer=True))\n",
+    "\n",
+    "# Customize the plot\n",
+    "plt.xlabel('Years')\n",
+    "plt.ylabel('Total Students')\n",
+    "plt.title('Total Female Vs Total Male Students Per Year')\n",
+    "plt.legend()\n",
+    "\n",
+    "# Display the plot\n",
+    "plt.grid(True)\n",
+    "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Females above average per year\n",
+    "femalesAboveAverage_2011 = 0\n",
+    "femalesAboveAverage_2012 = 0\n",
+    "femalesAboveAverage_2013 = 0\n",
+    "femalesAboveAverage_2014 = 0\n",
+    "femalesAboveAverage_2015 = 0\n",
+    "\n",
+    "for index, row in female_data.iterrows():\n",
+    "    femalesAboveAverage_2011 += ((row['%16-20 Points'] + row['%21-25 Points']) / 100) * row['2011 Total']\n",
+    "    femalesAboveAverage_2012 += ((row['%16-20 Points.1'] + row['%21-25 Points.1']) / 100) * row['2012 Total']\n",
+    "    femalesAboveAverage_2013 += ((row['%11-15 Points.2'] + row['%16-20 Points.2']) / 100) * row['2013 Total']\n",
+    "    femalesAboveAverage_2014 += ((row['%11-15 Points.3'] + row['%16-20 Points.3']) / 100) * row['2014 Total']\n",
+    "    femalesAboveAverage_2015 += ((row['%11-15 Points.4'] + row['%16-20 Points.4']) / 100) * row['2015 Total']\n",
+    "\n",
+    "# Males above average per year\n",
+    "malesAboveAverage_2011 = 0\n",
+    "malesAboveAverage_2012 = 0\n",
+    "malesAboveAverage_2013 = 0\n",
+    "malesAboveAverage_2014 = 0\n",
+    "malesAboveAverage_2015 = 0\n",
+    "\n",
+    "for index, row in male_data.iterrows():\n",
+    "    malesAboveAverage_2011 += ((row['%16-20 Points'] + row['%21-25 Points']) / 100) * row['2011 Total']\n",
+    "    malesAboveAverage_2012 += ((row['%16-20 Points.1'] + row['%21-25 Points.1']) / 100) * row['2012 Total']\n",
+    "    malesAboveAverage_2013 += ((row['%11-15 Points.2'] + row['%16-20 Points.2']) / 100) * row['2013 Total']\n",
+    "    malesAboveAverage_2014 += ((row['%11-15 Points.3'] + row['%16-20 Points.3']) / 100) * row['2014 Total']\n",
+    "    malesAboveAverage_2015 += ((row['%11-15 Points.4'] + row['%16-20 Points.4']) / 100) * row['2015 Total']\n",
+    "\n",
+    "femalesAboveAveragePerYear = [\n",
+    "    femalesAboveAverage_2011, \n",
+    "    femalesAboveAverage_2012, \n",
+    "    femalesAboveAverage_2013, \n",
+    "    femalesAboveAverage_2014, \n",
+    "    femalesAboveAverage_2015\n",
+    "]\n",
+    "\n",
+    "malesAboveAveragePerYear = [\n",
+    "    malesAboveAverage_2011, \n",
+    "    malesAboveAverage_2012, \n",
+    "    malesAboveAverage_2013, \n",
+    "    malesAboveAverage_2014, \n",
+    "    malesAboveAverage_2015\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Create a new figure and axis object\n",
+    "plt.figure(figsize=(8, 6))\n",
+    "ax = plt.gca()\n",
+    "\n",
+    "# Plot the first graph\n",
+    "ax.plot(years, femalesAboveAveragePerYear, label='Females', marker='o', linestyle='-', color='b')\n",
+    "\n",
+    "# Plot the second graph\n",
+    "ax.plot(years, malesAboveAveragePerYear, label='Males', marker='x', linestyle='--', color='r')\n",
+    "\n",
+    "#to remove the years in points ie 2011.5 from the x-axis\n",
+    "ax.xaxis.set_major_locator(MaxNLocator(integer=True))\n",
+    "\n",
+    "# Customize the plot\n",
+    "plt.xlabel('Years')\n",
+    "plt.ylabel('Total Students')\n",
+    "plt.title('Total Female Vs Total Male Students Above Average Per Year')\n",
+    "plt.legend()\n",
+    "\n",
+    "# Display the plot\n",
+    "plt.grid(True)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Districts Analysis\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Import necessary packages for map rendering\n",
+    "import geocoder             # geocoder to get coordinates for each school\n",
+    "import folium               # to display the map, and add markers for each location"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Filter the districts dataframe to remain with only ditrict totals excluding the Grand Total\n",
+    "district_totals = districts_df[districts_df['District_Name'].str.contains('Total') & ~districts_df['District_Name'].str.contains('Grand Total')]\n",
+    "\n",
+    "# Remove 'Total' from ditrict names since we are clearly working with totals here and would like to see only district names \n",
+    "# with their totals \n",
+    "district_totals['District_Name'] = district_totals['District_Name'].str.replace('Total', '')\n",
+    "\n",
+    "sortedDistricts_2011 = district_totals.sort_values(by='2011 Total', ascending=False)\n",
+    "sortedDistricts_2012 = district_totals.sort_values(by='2012 Total', ascending=False)\n",
+    "sortedDistricts_2013 = district_totals.sort_values(by='2013 Total', ascending=False)\n",
+    "sortedDistricts_2014 = district_totals.sort_values(by='2014 Total', ascending=False)\n",
+    "sortedDistricts_2015 = district_totals.sort_values(by='2015 Total', ascending=False)\n",
+    "\n",
+    "print(\"Table showing the top 10 districts with the highest number of students in 2011\")\n",
+    "display(sortedDistricts_2011[['District_Name', '2011 Total']].head(10))\n",
+    "\n",
+    "print(\"Table showing the top 10 districts with the highest number of students in 2012\")\n",
+    "display(sortedDistricts_2012[['District_Name', '2012 Total']].head(10))\n",
+    "\n",
+    "print(\"Table showing the top 10 districts with the highest number of students in 2013\")\n",
+    "display(sortedDistricts_2013[['District_Name', '2013 Total']].head(10))\n",
+    "\n",
+    "print(\"Table showing the top 10 districts with the highest number of students in 2014\")\n",
+    "display(sortedDistricts_2014[['District_Name', '2014 Total']].head(10))\n",
+    "\n",
+    "print(\"Table showing the top 10 districts with the highest number of students in 2015\")\n",
+    "display(sortedDistricts_2015[['District_Name', '2015 Total']].head(10))\n"
+   ]
   }
  ],
  "metadata": {
