combine school gender rows + add perf temp columns

--- a/uace_analysis.ipynb
+++ b/uace_analysis.ipynb
@@ -4679,6 +4679,90 @@
     "        'Above Average 2015'\n",
     "    ], inplace=True)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "######################## SAYNO ###########################\n",
+    "\n",
+    "# First we remember that each school (most schools) occupies two columns ie for FEMALE and MALE\n",
+    "# So let's combine the schools to occupy one single row\n",
+    "\n",
+    "# Initialize a new DataFrame to store the combined rows\n",
+    "combinedSchools_df = pd.DataFrame(columns=results_df.columns)\n",
+    "\n",
+    "# Initialize variables to store the previous school name and cumulative values\n",
+    "prev_school = \"\"\n",
+    "cumulative_values = None\n",
+    "\n",
+    "# Loop through the rows of the DataFrame\n",
+    "for index, row in results_df.iterrows():\n",
+    "    school_name = row['SCHOOL']\n",
+    "    \n",
+    "    # If the school name is the same as the previous one, accumulate the values\n",
+    "    if school_name == prev_school:\n",
+    "        for year_column in ['2011 Total', '2012 Total', '2013 Total', '2014 Total', '2015 Total']:\n",
+    "            # y - current row year total\n",
+    "            # k - previous row year total\n",
+    "            y = row[year_column]\n",
+    "            k = cumulative_values[year_column]\n",
+    "            studentSum = cumulative_values[year_column] + y\n",
+    "            cumulative_values[year_column] = studentSum\n",
+    "            \n",
+    "            for i in range(1, 5):\n",
+    "                if i > 4 and year_column in ['2013 Total', '2014 Total', '2015 Total']:\n",
+    "                    break\n",
+    "                current_col = results_df.columns.get_loc(year_column) + i\n",
+    "                j = row[current_col]\n",
+    "                x = cumulative_values[current_col]\n",
+    "                \n",
+    "                if studentSum > 0:\n",
+    "                    cumulative_values[current_col] = ((x * y) / studentSum) + ((j * k) / studentSum)\n",
+    "    else:\n",
+    "        # If the school name is different, add the accumulated row to the combined DataFrame\n",
+    "        if cumulative_values is not None:\n",
+    "            combinedSchools_df = combinedSchools_df._append(pd.Series(cumulative_values, index=combinedSchools_df.columns), ignore_index=True)\n",
+    "        \n",
+    "        # Start accumulating values for the new school\n",
+    "        cumulative_values = row.copy()\n",
+    "    \n",
+    "    prev_school = school_name\n",
+    "\n",
+    "# Add the last accumulated row to the combined DataFrame\n",
+    "if cumulative_values is not None:\n",
+    "    combinedSchools_df = combinedSchools_df._append(pd.Series(cumulative_values, index=combinedSchools_df.columns), ignore_index=True)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# In addition, let's get rid of the gender column because it's doing us no good at this point in our combinedSchools_df\n",
+    "\n",
+    "combinedSchools_df.drop(columns=['Gender'], inplace=True)\n",
+    "\n",
+    "# print(combinedSchools_df.columns)\n",
+    "# We now get to the bottom of things and will create additional temporary columns to get \n",
+    "# percentage of students above average points in each school\n",
+    "\n",
+    "combinedSchools_df['Above Average 2011'] = combinedSchools_df['%16-20 Points'] + combinedSchools_df['%21-25 Points']\n",
+    "combinedSchools_df['Above Average 2012'] = combinedSchools_df['%16-20 Points.1'] + combinedSchools_df['%21-25 Points.1']\n",
+    "combinedSchools_df['Above Average 2013'] = combinedSchools_df['%11-15 Points.2'] + combinedSchools_df['%16-20 Points.2']\n",
+    "combinedSchools_df['Above Average 2014'] = combinedSchools_df['%11-15 Points.3'] + combinedSchools_df['%16-20 Points.3']\n",
+    "combinedSchools_df['Above Average 2015'] = combinedSchools_df['%11-15 Points.4'] + combinedSchools_df['%16-20 Points.4']\n",
+    "\n",
+    "# Sort the DataFrame based on the combined column\n",
+    "sortedSchools_2011 = combinedSchools_df.sort_values(by='Above Average 2011', ascending=False)\n",
+    "sortedSchools_2012 = combinedSchools_df.sort_values(by='Above Average 2012', ascending=False)\n",
+    "sortedSchools_2013 = combinedSchools_df.sort_values(by='Above Average 2013', ascending=False)\n",
+    "sortedSchools_2014 = combinedSchools_df.sort_values(by='Above Average 2014', ascending=False)\n",
+    "sortedSchools_2015 = combinedSchools_df.sort_values(by='Above Average 2015', ascending=False)"
+   ]
   }
  ],
  "metadata": {
