add best schools ranking

--- a/uace_analysis.ipynb
+++ b/uace_analysis.ipynb
@@ -4763,6 +4763,68 @@
     "sortedSchools_2014 = combinedSchools_df.sort_values(by='Above Average 2014', ascending=False)\n",
     "sortedSchools_2015 = combinedSchools_df.sort_values(by='Above Average 2015', ascending=False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "######################## CRONNIE ###########################\n",
+    "\n",
+    "# After sorting the schools by each year depending on the school percentage above average\n",
+    "# We can now display the top 20 schools per year\n",
+    "\n",
+    "print(\"Table showing the top 20 schools with the highest percentage of students above average in 2011\")\n",
+    "display(sortedSchools_2011[['District_Name', 'SCHOOL', 'Above Average 2011']].head(20))\n",
+    "\n",
+    "print(\"Table showing the top 20 schools with the highest percentage of students above average in 2012\")\n",
+    "display(sortedSchools_2012[['District_Name', 'SCHOOL', 'Above Average 2012']].head(20))\n",
+    "\n",
+    "print(\"Table showing the top 20 schools with the highest percentage of students above average in 2013\")\n",
+    "display(sortedSchools_2013[['District_Name', 'SCHOOL', 'Above Average 2013']].head(20))\n",
+    "\n",
+    "print(\"Table showing the top 20 schools with the highest percentage of students above average in 2014\")\n",
+    "display(sortedSchools_2014[['District_Name', 'SCHOOL', 'Above Average 2014']].head(20))\n",
+    "\n",
+    "print(\"Table showing the top 20 schools with the highest percentage of students above average in 2015\")\n",
+    "display(sortedSchools_2015[['District_Name', 'SCHOOL', 'Above Average 2015']].head(20))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# We now get the top 10 perfoming schools across all the years\n",
+    "# Merge all DataFrames heads basing on the 'SCHOOL' column \n",
+    "\n",
+    "merged_df = pd.merge(sortedSchools_2011[['District_Name', 'SCHOOL', 'Above Average 2011']], sortedSchools_2012[['District_Name', 'SCHOOL', 'Above Average 2012']], on='SCHOOL', how='inner')\n",
+    "merged_df = pd.merge(merged_df, sortedSchools_2013[['District_Name', 'SCHOOL', 'Above Average 2013']], on='SCHOOL', how='inner')\n",
+    "merged_df = pd.merge(merged_df, sortedSchools_2014[['SCHOOL', 'Above Average 2014']], on='SCHOOL', how='inner')\n",
+    "merged_df = pd.merge(merged_df, sortedSchools_2015[['SCHOOL', 'Above Average 2015']], on='SCHOOL', how='inner')\n",
+    "\n",
+    "merged_df['Above Average Percentage'] = (\n",
+    "    merged_df['Above Average 2011'] + \n",
+    "    merged_df['Above Average 2012'] + \n",
+    "    merged_df['Above Average 2013'] + \n",
+    "    merged_df['Above Average 2014'] + \n",
+    "    merged_df['Above Average 2015']\n",
+    ") / 5\n",
+    "\n",
+    "merged_df = merged_df.sort_values(by='Above Average Percentage', ascending=False)\n",
+    "merged_df = merged_df.drop_duplicates(subset='SCHOOL')\n",
+    " \n",
+    "print(\"Best Performing Schools Across All The Years\")\n",
+    "display(merged_df[\n",
+    "    [\n",
+    "        'District_Name', \n",
+    "        'SCHOOL', \n",
+    "        'Above Average Percentage'\n",
+    "    ]\n",
+    "].head(20))"
+   ]
   }
  ],
  "metadata": {
