Show best schools on map and rank least performing schools

--- a/uace_analysis.ipynb
+++ b/uace_analysis.ipynb
@@ -4825,6 +4825,82 @@
     "    ]\n",
     "].head(20))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "######################## OJOK ###########################\n",
+    "\n",
+    "# We would now like to show the locations of these schools' districts on a map\n",
+    "# lets get the top 20 schools into their own dataframe\n",
+    "bestSchools_df = merged_df.head(20)\n",
+    "\n",
+    "# function to get coordinates for each school\n",
+    "def add_coordinates(district):\n",
+    "    # get the first name of the district coz some names have additionaldetails eg KOTIDO MAIN\n",
+    "    coords = geocoder.osm(district.split()[0] + ', UGANDA')\n",
+    "    return [coords.lat, coords.lng]\n",
+    "\n",
+    "# Add coordinates column to keep track of every school's coordinates\n",
+    "bestSchools_df['coordinates'] = bestSchools_df['District_Name'].apply(add_coordinates)\n",
+    "\n",
+    "# print(bestDistricts_df[['District_Name', 'coordinates']])\n",
+    "# Create a map centered at a Uganda\n",
+    "uganda_map = folium.Map(location=[1.373333, 32.290275], zoom_start=7)\n",
+    "\n",
+    "# indices to loop through the bestDistricts_df\n",
+    "ind = bestSchools_df.index\n",
+    "\n",
+    "# we need to add a marker for each location ie district\n",
+    "for i in range(len(ind)):\n",
+    "    folium.Marker(bestSchools_df['coordinates'].iloc[i],\n",
+    "                    popup= bestSchools_df['District_Name'].iloc[i]).add_to(uganda_map)\n",
+    "\n",
+    "# Display the map\n",
+    "uganda_map"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# We now work on the schools with the worst perfomance ie least percentage of students above average points\n",
+    "# Since we already sorted the school in their best order, we shall just inverse their order\n",
+    "\n",
+    "sortedSchools_2011 = sortedSchools_2011.iloc[::-1]\n",
+    "sortedSchools_2012 = sortedSchools_2012.iloc[::-1]\n",
+    "sortedSchools_2013 = sortedSchools_2013.iloc[::-1]\n",
+    "sortedSchools_2014 = sortedSchools_2014.iloc[::-1]\n",
+    "sortedSchools_2015 = sortedSchools_2015.iloc[::-1]\n",
+    "\n",
+    "# But we have a problem, there are schools that had no students in each year\n",
+    "# So it would be better to remove them and have cleaner and fairer results\n",
+    "sortedSchools_2011 = sortedSchools_2011[sortedSchools_2011['2011 Total'] > 0.0]\n",
+    "sortedSchools_2012 = sortedSchools_2012[sortedSchools_2012['2012 Total'] > 0.0]\n",
+    "sortedSchools_2013 = sortedSchools_2013[sortedSchools_2013['2013 Total'] > 0.0]\n",
+    "sortedSchools_2014 = sortedSchools_2014[sortedSchools_2014['2014 Total'] > 0.0]\n",
+    "sortedSchools_2015 = sortedSchools_2015[sortedSchools_2015['2015 Total'] > 0.0]\n",
+    "\n",
+    "print(\"Table showing the top 20 Schools with the Least percentage of students above average in 2011\")\n",
+    "display(sortedSchools_2011[['District_Name', 'SCHOOL', 'Above Average 2011']].head(20))\n",
+    "\n",
+    "print(\"Table showing the top 20 Schools with the Least percentage of students above average in 2012\")\n",
+    "display(sortedSchools_2012[['District_Name', 'SCHOOL', 'Above Average 2012']].head(20))\n",
+    "\n",
+    "print(\"Table showing the top 20 Schools with the Least percentage of students above average in 2013\")\n",
+    "display(sortedSchools_2013[['District_Name', 'SCHOOL', 'Above Average 2013']].head(20))\n",
+    "\n",
+    "print(\"Table showing the top 20 Schools with the Least percentage of students above average in 2014\")\n",
+    "display(sortedSchools_2014[['District_Name', 'SCHOOL', 'Above Average 2014']].head(20))\n",
+    "\n",
+    "print(\"Table showing the top 20 Schools with the Least percentage of students above average in 2015\")\n",
+    "display(sortedSchools_2015[['District_Name', 'SCHOOL', 'Above Average 2015']].head(20))"
+   ]
   }
  ],
  "metadata": {
